[package]
name = "firefangdotcom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base64 = "0.21.7"
bytes = "1.5.0"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3.30"
futures-util = "0.3.30"
handlebars = "5.1.0"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
image = "0.24.9"
mime_guess = "2.0.4"
pulldown-cmark = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
